[tool.poetry]
name = "repl_python3_aaaaa"
version = "0.1.0"
description = ""
authors = ["xzunknownzx <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.0"
pypresence = "^4.2.1"
colorama = "^0.4.4"
discord = "^1.7.3"
types-colorama = "^0.4.9"
colores = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
